updated header in html file

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <div class="logo"><span class="whitebold">Broadcast</span> by TEMPLATED</div>
+      <div class="menu">
+          <h2>Menu</h2>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
