updated footer part in html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
 
     <!--footer section start-->
     <footer>      
-
+                  <span><i class="fab fa-twitter icon"></i></span>
+                  <span><i class="fab fa-facebook icon"></i></span>
+                  <span><i class="fab fa-instagram icon"></i></span>
+                  <span><i class="fas fa-bell icon"></i></span>
     </footer>
     <!--footer section end-->
 
