--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header>
       <div class="logo"><span class="whitebold">Broadcast</span> by TEMPLATED</div>
       <div class="menu">
-          <h2>Menu</h2>
+          <h2><i class="fas fa-bars"></i>Menu</h2>
       </div>
     </header>
     <!--header section start-->
