pictures are replaced by placeholders

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                 </div>
                 <div class="banner2-lower">
                   <div class="banner2-lowerbox1">
-                    <img src="1.jpg">
+                    <img src="assets/banner2.png">
                     <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
                   </div>
                   <div class="banner2-lowerbox2">
-                    <img src="2.jpg">
+                    <img src="assets/banner2.png">
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                   </div>
                 </div>
@@ -99,12 +99,12 @@
                     </ul>
                   </div>
                   <div class="banner3-rightbox">
-                      <div class="banner3-photos"><img src="1.jpg" alt=""></div>
-                      <div class="banner3-photos"><img src="1.jpg" alt=""></div>
-                      <div class="banner3-photos"><img src="1.jpg" alt=""></div>
-                      <div class="banner3-photos"><img src="1.jpg" alt=""></div>
-                      <div class="banner3-photos"><img src="1.jpg" alt=""></div>
-                      <div class="banner3-photos"><img src="1.jpg" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
                   </div>
                 </div>
       </section>
@@ -114,9 +114,9 @@
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                   </div>
                   <div class="banner4-lower">
-                    <div class="banner4-photos"><img src="1.jpg" alt=""></div>
-                    <div class="banner4-photos"><img src="1.jpg" alt=""></div>
-                    <div class="banner4-photos"><img src="1.jpg" alt=""></div>
+                    <div class="banner4-photos"><img src="assets/banner4.png" alt=""></div>
+                    <div class="banner4-photos"><img src="assets/banner4.png" alt=""></div>
+                    <div class="banner4-photos"><img src="assets/banner4.png" alt=""></div>
                   </div>
       </section>
       <section class="about-info">
