--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
   <meta http-equiv="Pragma" content="no-store, no-cache" />
   <meta http-equiv="Expires" content="0" /> -->
-
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico" />
 
