--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
   <meta http-equiv="Pragma" content="no-store, no-cache" />
   <meta http-equiv="Expires" content="0" /> -->
-  <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico" />
 
@@ -49,7 +49,7 @@
     <header>
       <div class="logo"><span class="whitebold">Broadcast</span> by TEMPLATED</div>
       <div class="menu">
-          <h2><i class="fas fa-bars"></i>Menu</h2>
+          <h2><i class="fa fa-bars hamburg"></i>Menu</h2>
       </div>
     </header>
     <!--header section start-->
@@ -75,12 +75,12 @@
                   <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, sint. Magni!</span>
                 </div>
                 <div class="banner2-lower">
-                  <div class="banner2-lowerbox1">
-                    <img src="assets/banner2.png">
+                  <div class="banner2-lowerbox">
+                    <img src="assets/pics/banner4.png">
                     <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
                   </div>
-                  <div class="banner2-lowerbox2">
-                    <img src="assets/banner2.png">
+                  <div class="banner2-lowerbox">
+                    <img src="assets/pics/banner4.png">
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                   </div>
                 </div>
@@ -93,18 +93,18 @@
                 <div class="banner3-lower">
                   <div class="banner3-leftbox">
                     <ul>
-                      <li><a href="*/">Lorem ipsum dolor sit consectetur</a></li>
-                      <li><a href="*/">Lorem ipsum dolor sit consectetur</a></li>
-                      <li><a href="*/">Lorem ipsum dolor sit consectetur</a></li>
+                      <li><a href="*/">Lorem ipsum dolor sit</a></li>
+                      <li><a href="*/">Lorem ipsum dolor sit</a></li>
+                      <li><a href="*/">Lorem ipsum dolor sit</a></li>
                     </ul>
                   </div>
                   <div class="banner3-rightbox">
-                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
-                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
-                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
-                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
-                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
-                      <div class="banner3-photos"><img src="assets/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/pics/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/pics/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/pics/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/pics/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/pics/banner3.png" alt=""></div>
+                      <div class="banner3-photos"><img src="assets/pics/banner3.png" alt=""></div>
                   </div>
                 </div>
       </section>
@@ -151,10 +151,10 @@
 
     <!--footer section start-->
     <footer>      
-                  <span><i class="fab fa-twitter icon"></i></span>
-                  <span><i class="fab fa-facebook icon"></i></span>
-                  <span><i class="fab fa-instagram icon"></i></span>
-                  <span><i class="fas fa-bell icon"></i></span>
+                  <span><i class="fa fa-twitter icon"></i></span>
+                  <span><i class="fa fa-facebook icon"></i></span>
+                  <span><i class="fa fa-instagram icon"></i></span>
+                  <span><i class="fa fa-bell icon"></i></span>
     </footer>
     <!--footer section end-->
 
