--- a/index.html
+++ b/index.html
@@ -114,9 +114,15 @@
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                   </div>
                   <div class="banner4-lower">
-                    <div class="banner4-photos"><img src="assets/banner4.png" alt=""></div>
-                    <div class="banner4-photos"><img src="assets/banner4.png" alt=""></div>
-                    <div class="banner4-photos"><img src="assets/banner4.png" alt=""></div>
+                    <div class="banner4-photos"><img src="assets/pics/banner4.png" alt="">
+                      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                    </div>
+                    <div class="banner4-photos"><img src="assets/pics/banner4.png" alt="">
+                      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                    </div>
+                    <div class="banner4-photos"><img src="assets/pics/banner4.png" alt="">
+                      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                    </div>
                   </div>
       </section>
       <section class="about-info">
