footer structure changed

--- a/index.html
+++ b/index.html
@@ -157,10 +157,14 @@
 
     <!--footer section start-->
     <footer>      
-                  <span><i class="fa fa-twitter icon"></i></span>
+                  <div class="icons"><span><i class="fa fa-twitter icon"></i></span>
                   <span><i class="fa fa-facebook icon"></i></span>
                   <span><i class="fa fa-instagram icon"></i></span>
                   <span><i class="fa fa-bell icon"></i></span>
+                  </div>
+                  <div>
+                    <span class="faint">&copy; Untitled.Design:</span><span class="dark">Templated.</span><span class="faint">Images:</span><span class="dark">Coverr</span><span class="faint">.Video:</span><span class="dark">Coverr</span>
+                  </div>
     </footer>
     <!--footer section end-->
 
